# tcx-laps

./: Cargo.toml  ex-big.tcx  ex-small.tcx
src/: main.rs  parse.rs
