[package]
name = "tcx-laps"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
clap = { version = "4.4.13", features = ["derive"] }
quick-xml = { version = "0.31.0", features = ["serde", "serialize"] }
serde = "1.0.194"
serde_derive = "1.0.194"
xml = "0.8.10"
